--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,16 @@
 set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
+
+unbind-key %
+unbind-key '"'
+bind-key % split-window -c "#{pane_current_path}"
+bind-key '"' split-window -hc "#{pane_current_path}"
+
+unbind-key c
+bind-key c new-window -c "#{pane_current_path}"
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
