--- a/tmux.conf
+++ b/tmux.conf
@@ -14,3 +14,5 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
