--- a/tmux.conf
+++ b/tmux.conf
@@ -15,4 +15,13 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+setw -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+set -g @shell_mode 'vi'
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+run '~/.tmux/plugins/tpm/tpm'
