--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,9 @@ set -g @shell_mode 'vi'
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# may require brew installing reattach-to-user-namespace
+# see https://github.com/tmux-plugins/tmux-yank#os-x-requirements
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
