--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 set -g prefix C-a
 unbind-key C-b
-bind-key C-a send-prefix
+bind-key a send-prefix
+bind-key C-a last-window
 
 unbind-key %
 unbind-key '"'
@@ -22,8 +23,7 @@ set -g @shell_mode 'vi'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# may require brew installing reattach-to-user-namespace
-# see https://github.com/tmux-plugins/tmux-yank#os-x-requirements
+set-option -g default-command 'reattach-to-user-namespace -l zsh'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
