--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ set -g @shell_mode 'vi'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set-option -g default-command 'reattach-to-user-namespace -l zsh'
+# set-option -g default-command 'reattach-to-user-namespace -l zsh'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.tmux/plugins/tpm/tpm'
